; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-sa1100.c_sa1100_gpio_unmask.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-sa1100.c_sa1100_gpio_unmask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }
%struct.sa1100_gpio_chip = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @sa1100_gpio_unmask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sa1100_gpio_unmask(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca %struct.sa1100_gpio_chip*, align 8
  %4 = alloca i32, align 4
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %5 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %6 = call %struct.sa1100_gpio_chip* @irq_data_get_irq_chip_data(%struct.irq_data* %5)
  store %struct.sa1100_gpio_chip* %6, %struct.sa1100_gpio_chip** %3, align 8
  %7 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %8 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @BIT(i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.sa1100_gpio_chip*, %struct.sa1100_gpio_chip** %3, align 8
  %13 = getelementptr inbounds %struct.sa1100_gpio_chip, %struct.sa1100_gpio_chip* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = or i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = load %struct.sa1100_gpio_chip*, %struct.sa1100_gpio_chip** %3, align 8
  %17 = call i32 @sa1100_update_edge_regs(%struct.sa1100_gpio_chip* %16)
  ret void
}

declare dso_local %struct.sa1100_gpio_chip* @irq_data_get_irq_chip_data(%struct.irq_data*) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @sa1100_update_edge_regs(%struct.sa1100_gpio_chip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
